# easy_mindoc

./: .gitignore  README.md  config.ini  easy_mindoc.py  easy_mindoc.spec  setup.py
easy_mindoc/: easy_mindoc.py
easy_mindoc/files/: video.py
easy_mindoc/mindoc/: mindoc.py
easy_mindoc/my_config/: __init__.py
easymindoc/: README.md  pyproject.toml
easymindoc/easymindoc/: __init__.py  easy_mindoc.py
easymindoc/easymindoc/files/: __init__.py
easymindoc/easymindoc/markdown/: __init__.py  markdown_reader.py
easymindoc/easymindoc/mindoc/: __init__.py  mindoc.py
easymindoc/easymindoc/my_config/: mindoc_config.py
easymindoc/tests/: test_easymindoc.py
files/: annex.py  image.py
markdown/: markdown_reader.py
mindoc/: __init__.py
