[tool.poetry]
name = "easymindoc"
version = "0.3.0"
description = ""
authors = ["张尚斌 <zhangshangbin01@spnic.com.cn>"]
readme = "README.md"

[tool.poetry.scripts]
easymindoc = "easymindoc.easy_mindoc:main"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.3.2"}
requests = {extras = ["all"], version = "^2.25.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
